# jobkit

./: CMakeLists.txt  README.md  build_and_test.bat
cmake/: jobkitConfig.cmake.in
core/include/: JobSystem.h
core/src/: JobSystem.cpp
tests/: test_jobsystem.cpp
